--- a/style.css
+++ b/style.css
@@ -1,15 +1,112 @@
-* {}
-
 body {
-    margin: 0;
+    background-image: linear-gradient(90deg, rgba(66, 187, 227, 0.608), rgb(226, 100, 100));
 }
 
-.container {
-    background-color: aquamarine;
-    background-size: cover;
+header {
+    background-image: linear-gradient(90deg, rgba(66, 187, 227, 0.608), rgb(226, 100, 100));
+    padding: 20x 0;
 }
 
-.principal {
-    background-color: aquamarine;
-    background-size: cover;
+nav li {
+    display: inline;
+}
+
+nav a {
+    text-transform: uppercase;
+    color: 000000;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
+}
+
+.logos {
+    width: auto;
+    margin: 0 auto;
+    padding: 50px 0;
+}
+
+.logos li:hover h2 {
+    font-size: 35px;
+}
+
+.logos h2 {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.texto {
+    font-size: 20px;
+    font-weight: bold;
+    margin: 10px 0 0;
+}
+
+footer {
+    text-align: center;
+    padding: 40px 0;
+}
+
+.copyright {
+    color: #E0FFFF;
+    font-size: 13px;
+}
+
+main {
+    width: 940px;
+    margin: 0 auto;
+}
+
+form {
+    margin: 40px 0;
+}
+
+form label,
+form p {
+    display: block;
+    font-size: 20px;
+    margin: 0 0 15px;
+}
+
+//*css da pagina inicial*//
+.banner {
+    width: 200px;
+}
+
+.titulo-principal {
+    text-transform: center;
+    font-size: 2em;
+    margin: 0 0 1em;
+    clear: left;
+}
+
+.principal p {
+    margin: 0 0 1em;
+}
+
+.principal strong {
+    font-size: bold;
+    color: #000000;
+}
+
+.principal em {
+    font-style: italic;
+}
+
+.portifolio-conteudo {
+    width: 60%;
+    margin: 0 auto;
+}
+
+.lista-desafios {
+    width: 40%;
+    display: inline-block;
+}
+
+.fronback {
+    width: 40%;
+}
+
+.dimdim {
+    width: 250px;
+    float: left;
+    margin: 0 20px 20px 0;
 }
